2006-09-18  Zack Weinberg  <zackw@panix.com>

	* roster.cc (unify_roster_oneway): Rename to union_new_nodes;
	rework to remove need for true node IDs.
	(unify_rosters): Update to match; only call union_new_nodes once.
	(check_post_roster_unification_ok): Add argument saying whether
	temp nodes are OK; pass it to check_sane.
	(create_some_new_temp_nodes): Rename create_random_unification_task;
	construct asymmetric cases (new in A, not in B) as well as
	symmetric cases.
	(unify_rosters_randomized): Bulk of work moved to
	unify_rosters_randomized_core; diverge into two tests, probing
	both the situation where true node IDs are in use, and the
	situation where they aren't.

	N.B. this patchset breaks the random_actions unit test for no
	apparent reason; will fix later.

2006-09-18  Zack Weinberg  <zackw@panix.com>

	* unit_tests.cc: Rewrite for declarative registration of test cases,
	better command line handling, and more useful stderr chatter in
	normal operation.  All debug output now goes to a logfile (default
	"unit_tests.log") and can be sent back to stderr with --debug.
	* unit_tests.hh: Remove declarations of removed functions.
	Don't include unit_test_suite.hpp.
	(UNIT_TEST, struct unit_test_case): New.
	(BOOST_CHECK_NOT_THROW): Reindent and wrap in do { } while (0).

	* charset.cc, crypto_tests.cc, cset.cc, diff_patch.cc, globish.cc
	* keys.cc, netcmd.cc, netxx_pipe.cc, packet.cc, paths.cc, refiner.cc
	* restrictions.cc, revision.cc, roster.cc, roster_merge.cc
	* simplestring_xform.cc, string_queue.cc, transforms.cc, uri.cc
	* numeric_vocab.cc, xdelta.cc: Unit tests are now defined like
	commands, as UNIT_TEST(group, test) { ... } and no registration
	function is necessary.

	* cert.cc, file_io.cc, vocab.cc: Remove empty BUILD_UNIT_TESTS block.

	* commands.cc (command::command) Remove redundant boolean, just
	check whether cmds is NULL.

2006-09-18  Richard Levitte  <richard@levitte.org>

	* po/sv.po: 1 fuzzy.

2006-09-17  Nathaniel Smith  <njs@pobox.com>
